--- a/Maratona-Discover/index.html
+++ b/Maratona-Discover/index.html
@@ -26,7 +26,7 @@
                     <span>Entradas</span>
                     <img src="./assets/income.svg" alt="Imagem de entradas">
                 </h3>
-                <p>R$5.000,00</p>
+                <p id="incomeDisplay">R$ 0,00</p>
             </div>
 
             <div class="card">
@@ -34,7 +34,7 @@
                     <span>Saídas</span>
                     <img src="./assets/expense.svg" alt="Imagem de saídas">
                 </h3>
-                <p>R$2.000,00</p>
+                <p id="expenseDisplay">R$ 0,00</p>
             </div>
 
             <div class="card total">
@@ -42,7 +42,7 @@
                     <span>Total</span>
                     <img src="./assets/total.svg" alt="Imagem de total">
                 </h3>
-                <p>R$3.000,00</p>
+                <p id="totalDisplay">R$ 0,00</p>
             </div>
 
         </section>
@@ -50,7 +50,7 @@
         <section id="transaction">
             <h2 class="sr-only">Transações</h2>
 
-            <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
+            <a href="#" onclick="Modal.toggle()" class="button new">+ Nova Transação</a>
 
             <table id="data-table">
                 <thead>
@@ -63,32 +63,6 @@
                 </thead>
 
                 <tbody>
-                    <tr>
-                        <td class="description">Luz</td>
-                        <td class="expense">- R$ 500,00</td>
-                        <td class="date">32/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td class="description">Criação website</td>
-                        <td class="income">R$ 5.000,00</td>
-                        <td class="date">32/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td class="description">Internet</td>
-                        <td class="expense">- R$ 200,00</td>
-                        <td class="date">32/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
                 </tbody>
             </table>
 
@@ -100,7 +74,7 @@
             <div id="form">
                 <h2>Nova Transação</h2>
 
-                <form action="">
+                <form action="" onsubmit="Form.submit(event)">
 
                     <div class="input-group">
                         <label class="sr-only" for="description">Descrição</label>
@@ -120,7 +94,7 @@
                     </div>
 
                     <div class="input-group actions">
-                        <a href="#" onclick="Modal.close()" class="button cancel">Cancelar</a>
+                        <a href="#" onclick="Modal.toggle()" class="button cancel">Cancelar</a>
                         <button>Salvar</button>
                     </div>
                 </form>
@@ -132,16 +106,7 @@
         <p>dev.finance$</p>
     </footer>
 
-    <script>
-        const Modal = {
-            open() {
-                document.querySelector('.modal-overlay').classList.add('active')
-            },
-            close() {
-                document.querySelector('.modal-overlay').classList.remove('active')
-            }
-        }
-    </script>
+    <script src="./scripts.js"></script>
 </body>
 
 </html>
